<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <RadioGroup
            android:id="@+id/radio_group_ft_orient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:text="@string/ft_op_0"
                android:id="@+id/rb_orient_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:text="@string/ft_op_90"
                android:id="@+id/rb_orient_90"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:text="@string/ft_op_180"
                android:id="@+id/rb_orient_180"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:text="@string/ft_op_270"
                android:id="@+id/rb_orient_270"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:text="@string/ft_op_all"
                android:id="@+id/rb_orient_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>

        <LinearLayout
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_below="@+id/radio_group_ft_orient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="activeEngine"
                android:text="@string/active_engine" />

            <Button
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="jumpToSingleImageActivity"
                android:text="@string/page_single_image" />

            <Button
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="jumpToPreviewActivity"
                android:text="@string/page_preview" />

            <Button
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="jumpToMultiImageActivity"
                android:text="@string/page_multi_image" />


            <Button
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="jumpToFaceRecognizeActivity"
                android:text="@string/face_recognize_mode" />

            <Button
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="jumpToBatchRegisterActivity"
                android:text="@string/face_manage" />

            <Button
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="jumpToRegisterFaceActivity"
                android:text="@string/face_register"/>

            <Button
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="jumpToFaceRecognitionActivity"
                android:text="@string/face_recognition"/>

            <Button
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="clearFaceDb"
                android:text="@string/clear_face_database"/>

        </LinearLayout>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
